trunk/Archive2/d3/dfc20e5359e74b/output
+ clang++ -std=c++11 -O0 -W -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:31:50: error: nested name specifier 'FunctionSequence<C, R (Args...)>::Type<F...>::' for declaration does not refer into a class, class template or class template partial specialization
    FunctionSequence<C, R(Args...)>::Type<F...>::f[]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
1 error generated.
